# umbra

./: CMakeLists.txt
projs/shadow-engine/: shadow-engine.cpp
projs/shadow-file-format/: shadow-file-format.vcxproj  shadow-file-format.vcxproj.filters
projs/shadow-file-format/src/: SFFElement.cpp  SFFElement.ixx  SFFParser.cpp  SFFParser.ixx
projs/shadow-utility/: shadow-utility.vcxproj  string-helpers.cpp
projs/shadow/shadow-engine/src/core/: ShadowApplication.cpp
projs/shadow/shadow-file-format/cmake/: CatchAddTests.cmake
projs/shadow/shadow-utility/: CMakeLists.txt
